# clio-tools

./: .dockerignore  .env.example  .gitattributes  .gitignore  ADD-odoo-integration.md  CHANGELOG.md  CLAUDE.template.md  Dockerfile.test  GIT_WORKFLOW.md  LICENSE  README.md  check_all.py  clio.config.example  clio.py  clio1.py  clio2.py  clio_banner.py  clio_env.py  clio_menu.py  clio_qc.py  clio_run_graph.py  clio_run_job.py  clio_run_mail.py  clio_run_obit.py  clio_run_odoo.py  clio_run_privfin.py  clio_run_research.py  clio_runners.py  dependency_map.md  patch_handlers.py  patch_handlers_routing.py  patch_minne.py  patch_rag_handler.py  requirements.txt
.githooks/: pre-commit  pre-push
clio-agent-job/: .env.example  CLAUDE.md  _send_test_recruiter.py  _test_pipeline.py  analyzer.py  check_deps.py  config.yaml  migrate_articles.py  migrate_yaml_to_odoo.py  notifier.py  odoo_reader.py  odoo_writer.py  onboarding.py  reindex_matches.py  reporter.py  requirements.txt  run.py  state.py
clio-agent-mail/: .env.example  CLAUDE.md  MANUAL.md  README.md  account_scopes.json  admin.py  approval.py  attachments.py  check_deps.py  classifier.py  clio-mail.service  clio_service.py  commands.py  events_db.py  faq.py  handlers.py  handlers.py.bak  helpers.py  imap_client.py  insights.py  intent_classifier.py  mail_service.py  main.py  notion_data.py  odoo_sync.py  reply.py  requirements.txt  (+3 more)
clio-core/: CLAUDE.md  README.md  check_deps.py  pyproject.toml  requirements.txt
clio-core/clio_core/: __init__.py  banner.py  mail.py  utils.py
clio-core/clio_core/locales/: en.json
(+573 files in other folders)
