[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clio-core"
version = "1.0.0"
description = "Shared utilities for the clio-tools ecosystem"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["clio_core*"]

[tool.setuptools.package-data]
clio_core = ["locales/*.json"]
